--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,9 @@ out/
 # Gradle files
 .gradle/
 build/
+app/build/
 app/release/
+app/debug/
 
 # Local configuration file (sdk path, etc)
 local.properties
