--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: trusty
 language: android
 android:
   components:
@@ -7,7 +8,7 @@ android:
     # - platform-tools
 
     # The BuildTools version used by your project
-    - build-tools-30.0.0
+    - build-tools-27.0.3
 
     # The SDK version used to compile your project
     - android-27
