--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
     dataBinding {
         enabled true
     }
+    
+    lintOptions {
+        abortOnError false
+    }
 }
 
 androidExtensions {
