--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ android:
 
     - extra-google-google_play_services
 
+script:
+  - ./gradlew build check
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
