--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
     }
 
     buildTypes {
+        debug {
+            debuggable true
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -41,8 +45,12 @@ dependencies {
     implementation project(':form')
     testImplementation presentationTestDependencies
     androidTestImplementation presentationInstrumentationTestDependencies
-    compile('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
-        transitive = true;
+    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
+        transitive = true
     }
     implementation files('libs/poishadow-all.jar')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
