--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,16 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 
     defaultConfig {
         applicationId "com.gemini.energy"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -45,4 +49,15 @@ dependencies {
         transitive = true;
     }
     implementation files('libs/poishadow-all.jar')
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+//    implementation 'androidx.core:core-ktx:1.3.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
+}
+repositories {
+    mavenCentral()
 }
