--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.gemini.energy">
 
+    <!--request camera feature-->
+    <uses-permission
+        android:name="android.permission.CAMERA"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
 
-    <uses-permission android:name="android.permission.READ_LOGS"
-    tools:ignore="ProtectedPermissions" />
+    <uses-permission
+        android:name="android.permission.READ_LOGS"
+        tools:ignore="ProtectedPermissions" />
 
     <application
         android:name=".App"
@@ -19,6 +26,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--needed for saving images to custom location-->
+        <!--        <provider-->
+        <!--            android:name="androidx.core.content.FileProvider"-->
+        <!--            android:authorities="com.gemini.energy.android.fileprovider"-->
+        <!--            android:exported="false"-->
+        <!--            android:grantUriPermissions="true">-->
+        <!--            <meta-data-->
+        <!--                android:name="android.support.FILE_PROVIDER_PATHS"-->
+        <!--                android:resource="@xml/file_paths"/>-->
+        <!--        </provider>-->
+        <!--END needed for saving images to custom location -->
+
         <activity android:name=".presentation.audit.AuditActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +47,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".presentation.type.TypeActivity"/>
+        <activity android:name=".presentation.type.TypeActivity" />
         <activity android:name=".presentation.audit.SettingsActivity" />
 
         <activity
