--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,11 @@ android {
     dataBinding {
         enabled true
     }
+
+    packagingOptions {
+        pickFirst "META-INF/DEPENDENCIES"
+        // exclude "META-INF/DEPENDENCIES"
+    }
 }
 
 androidExtensions {
@@ -56,6 +61,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+
+    // aws s3
+    implementation 'com.amazonaws:aws-android-sdk-core:2.16.13'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.16.13'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.16.13'
 }
 repositories {
     mavenCentral()
